nlopt: no curvature

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
 
 find_package(OpenCV REQUIRED core highgui imgproc imgcodecs)
 
+set(NLopt_DIR "/home/chelizi/ThirdPartyLib/nlopt/build")
+find_package(NLopt REQUIRED)
+
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   geometry_msgs
@@ -21,6 +24,7 @@ set(SOURCES
   ${CMAKE_CURRENT_SOURCE_DIR}/src/bucket_queue.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/dynamic_voronoi.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/path_smoother.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/nlopt_smoother.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/vec2d.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/test_smooth.cpp
 )
@@ -39,13 +43,14 @@ include_directories(
   include
   ${catkin_INCLUDE_DIRS}
   ${OpenCV_INCLUDE_DIRS}
+  ${NLOPT_INCLUDE_DIRS}
 )
 
 add_library(path_smoother ${SOURCES})
 add_dependencies(path_smoother ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(path_smoother ${catkin_LIBRARIES})
-target_link_libraries(path_smoother ${OpenCV_LIBS})
+target_link_libraries(path_smoother ${OpenCV_LIBS} ${NLOPT_LIBRARIES})
 
 add_executable(smooth_node ${SOURCES})
 add_dependencies(smooth_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(smooth_node  ${catkin_LIBRARIES} ${OpenCV_LIBS})
+target_link_libraries(smooth_node  ${catkin_LIBRARIES} ${OpenCV_LIBS} ${NLOPT_LIBRARIES})
